Fixed width issues and spacing in mobile view.

--- a/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
+++ b/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
@@ -1790,6 +1790,8 @@ article.free-energy.picture-promo {
 		padding: 320px 0 50px 0;
 		@include breakpoint(small) {
 			margin: 0;
+			width: auto;
+			padding-bottom: 30px;
 		}
 		h2 {
 			color: #fff;
@@ -1798,6 +1800,9 @@ article.free-energy.picture-promo {
 				font-size: 31px;
 			}
 		}
+	}
+	@include breakpoint(small) {
+		background-position: center bottom;
 	}
 } 
 
